--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,9 @@ jobs:
         login-server: ${{steps.getVaultSecrets.outputs.containerRegistryLoginServer}}
         username: ${{steps.getVaultSecrets.outputs.containerRegistryPassword}}
         password: ${{steps.getVaultSecrets.outputs.containerRegistryUsername}}
-    - run: |
+
+    - name:
+      run: |
         docker build . -t ${{steps.getVaultSecrets.outputs.containerRegistryLoginServer}}/rw-nodejs:${{ github.sha }}
         docker push ${{steps.getVaultSecrets.outputs.containerRegistryLoginServer}}/rw-nodejs:${{ github.sha }}   
 
