--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
         username: ${{steps.getVaultSecrets.outputs.containerRegistryPassword}}
         password: ${{steps.getVaultSecrets.outputs.containerRegistryUsername}}
 
-    - name:
+    - name: Build and Push image
       run: |
         docker build . -t ${{steps.getVaultSecrets.outputs.containerRegistryLoginServer}}/rw-nodejs:${{ github.sha }}
         docker push ${{steps.getVaultSecrets.outputs.containerRegistryLoginServer}}/rw-nodejs:${{ github.sha }}   
